--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "patripples",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "^14.2.15",
-    "@supabase/supabase-js": "^2.49.4",
-    "@vercel/analytics": "^1.5.0",
-    "clsx": "^2.1.1",
-    "d3": "^7.9.0",
-    "next": "14.1.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-share": "^5.2.2",
-    "sharp": "^0.33.5"
-  },
-  "devDependencies": {
-    "@types/d3": "^7.4.3",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3",
-    "typescript": "^5"
-  }
+	"name": "RudiFromFlint",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@next/font": "^14.2.15",
+		"@supabase/supabase-js": "^2.49.4",
+		"@vercel/analytics": "^1.5.0",
+		"clsx": "^2.1.1",
+		"d3": "^7.9.0",
+		"leaflet": "^1.9.4",
+		"next": "14.1.3",
+		"react": "^19.0.0-rc.1",
+		"react-dom": "^19.0.0-rc.1",
+		"react-share": "^5.2.2",
+		"sharp": "^0.33.5"
+	},
+	"devDependencies": {
+		"@types/d3": "^7.4.3",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.1.3",
+		"typescript": "^5"
+	}
 }
