--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
 		"d3": "^7.9.0",
 		"leaflet": "^1.9.4",
 		"next": "14.1.3",
-		"react": "^19.0.0-rc.1",
-		"react-dom": "^19.0.0-rc.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-leaflet": "^5.0.0",
 		"react-share": "^5.2.2",
 		"sharp": "^0.33.5"
 	},
